--- a/lesson1/helloworld.html
+++ b/lesson1/helloworld.html
@@ -51,7 +51,13 @@
                 </p>
                 <p>
                     When you open <a href="http://www.microbit.co.uk" target="new">Microbit.org.uk</a> you'll find a button labled
-                     "Create Code"
+                     "Create Code"; click on it to send yourself to the next page below, where you'll click on the "New project" button under Block editor
+                      to start creating code.
+                </p>
+                <p>
+                    <center>
+                        <img src="screenshot2.png" width="75%" width="auto"></img>
+                    </center>
                 </p>
             </div>
             
