--- a/lesson2/Input.html
+++ b/lesson2/Input.html
@@ -64,7 +64,9 @@
             <h3>Shaking</h3>
         </div>
         <div class="panel panel-body">
-            <img src="single.jpg" width="30%" class="spin">
+            <img src="single.jpg" width="30%" class="" id="shaking">
+            <button class="btn btn-primary" onclick="document.getElementById('shaking').className='spin';
+            setTimeout(function(){document.getElementById('shaking').className=''}, 500);">Shake</button>
         </div>
     </body>
 </html>
