--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <meta charset="UTF-8">
     <title>Microbit Hub</title>
     <link rel="stylesheet" href="https://bootswatch.com/sandstone/bootstrap.min.css" type="text/css" />
-    <link rel="stylesheet" href="/bootsnipps.css" type="text/css" />
-    
-
+    <link rel="stylesheet" href="/microbit/bootsnipps.css" type="text/css" />
 </head>
 
 <body>
