--- a/lesson2/Input.html
+++ b/lesson2/Input.html
@@ -4,7 +4,7 @@
             <meta charset="UTF-8">
         <title>Microbit</title>
         <link rel="stylesheet" href="https://bootswatch.com/yeti/bootstrap.min.css" type="text/css" />
-        <link rel="stylesheet" href="/bootsnipps.css" type="text/css" />
+        <link rel="stylesheet" href="/microbit/bootsnipps.css" type="text/css" />
     
     
         <style type="text/css">
